refactored include flex declarations scss, remove innecessary references in html, remove paddings and margins in title and content

--- a/index.html
+++ b/index.html
@@ -335,25 +335,25 @@
                 </button>
             </div>
             <div class="nav_menu_link_btns">
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="hero_section" data-lebel="Inicio">
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="hero_section">
                     <span class="label_btn" data-change data-en="Home" data-es="Inicio"></span>
                 </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="about_section" data-lebel="Acerca de">
-                    <span class="label_btn" data-change data-en="About Us" data-es="Acerca De"></span>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="about_section">
+                    <span class="label_btn" data-change data-en="About Me" data-es="Quien Soy"></span>
                 </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="skills_section" data-lebel="Habilidades">
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="skills_section">
                     <span class="label_btn" data-change data-en="Skills" data-es="Habilidades"></span>
                 </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="services_section" data-lebel="Servicios">
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="services_section">
                     <span class="label_btn" data-change data-en="Services" data-es="Servicios"></span>
                 </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="portfolio_section" data-lebel="Portafolio">
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="portfolio_section">
                     <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio"></span>
                 </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="contact_section" data-lebel="Contacto">
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="contact_section">
                     <span class="label_btn" data-change data-en="Contact" data-es="Contacto"></span>
                 </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="legals_section" data-lebel="Legales">
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="legals_section">
                     <span class="label_btn" data-change data-en="Legals" data-es="Legales"></span>
                 </button>
             </div>
@@ -537,7 +537,7 @@
                     </div>
                 </button>
                 <div class="menu_controler nav_menu_controler">
-                    <button type="button" class="section_btn nav_btn main_nav_btn" name="hero_section" data-lebel="Inicio">
+                    <button type="button" class="section_btn nav_btn main_nav_btn" name="hero_section">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="home_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Inicio</title>
@@ -546,7 +546,7 @@
                         </span>
                         <span class="label_btn" data-change data-es="Inicio" data-en="Home">Inicio</span>
                     </button>
-                    <button type="button" class="section_btn nav_btn about_nav_btn" name="about_section" data-lebel="Acerca de">
+                    <button type="button" class="section_btn nav_btn about_nav_btn" name="about_section">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" class="about_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Acerca de</title>
@@ -554,9 +554,9 @@
                                 <path class="cls-1" d="M15 22V9h5V7H4v2h5v13h2v-7h2v7z"></path>
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-es="Acerca De" data-en="About Us">Acerca De</span>
+                        <span class="label_btn" data-change data-es="Quien Soy" data-en="About Me">Quien Soy</span>
                     </button>
-                    <button type="button" class="section_btn nav_btn skills_nav_btn" name="skills_section" data-lebel="Habilidades">
+                    <button type="button" class="section_btn nav_btn skills_nav_btn" name="skills_section">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="skills_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Habilidades</title>
@@ -568,7 +568,7 @@
                         </span>
                         <span class="label_btn" data-change data-en="Skills" data-es="Habilidades">Habilidades</span>
                     </button>
-                    <button type="button" class="section_btn nav_btn services_nav_btn" name="services_section" data-lebel="Servicios">
+                    <button type="button" class="section_btn nav_btn services_nav_btn" name="services_section">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="services_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Servicios</title>
@@ -580,7 +580,7 @@
                         </span>
                         <span class="label_btn" data-change data-en="Services" data-es="Servicios">Servicios</span>
                     </button>
-                    <button type="button" class="section_btn nav_btn portfolio_nav_btn" name="portfolio_section" data-lebel="Portafolio">
+                    <button type="button" class="section_btn nav_btn portfolio_nav_btn" name="portfolio_section">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="portfolio_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <title>Portafolio</title>
@@ -590,7 +590,7 @@
                         </span>
                         <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio"></span>
                     </button>
-                    <button type="button" class="section_btn nav_btn contact_nav_btn" name="contact_section" data-lebel="Contacto">
+                    <button type="button" class="section_btn nav_btn contact_nav_btn" name="contact_section">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Contacto</title>
@@ -599,7 +599,7 @@
                         </span>
                         <span class="label_btn" data-change data-en="Contact" data-es="Contacto">Contacto</span>
                     </button>
-                    <button type="button" class="section_btn nav_btn legals_nav_btn" name="legals_section" data-lebel="Legales">
+                    <button type="button" class="section_btn nav_btn legals_nav_btn" name="legals_section">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="legals_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path
