refactored icon style, just 1 rule, close btns adding a control, remove position absolute

--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
         <!-- !MODAL -->
         <div class="modal">
             <div class="modal_window alert_modal" id="alert_modal">
+                <div class="close_control">
+                    <button type="button" class="icon_container close_btn close_modal" id="alert_modal_storage_close_btn" data-name="alert_modal">
+                        <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                            <title>Cerrar</title>
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
+                        </svg>
+                    </button>
+                </div>
                 <div class="modal_header"><h1 class="title_modal" data-change data-es="Politica de uso de datos" data-en="Data use policy">Politica de uso de datos</h1></div>
                 <div class="modal_info">
                     <p class="description_modal" data-change data-es="Esta pagina no utiliza cookies ni ninguno de sus datos" data-en="This page not make use of cookies and neither other of your data">Esta pagina no utiliza cookies ni ninguno de sus datos</p>
@@ -95,15 +104,17 @@
                 <button type="button" class="btn more_btn alert_modal_accept_btn storage_accept">
                     <span class="label_btn" data-change data-es="Aceptar" data-en="Accept">Aceptar</span>
                 </button>
-                <button type="button" class="close_btn close_modal" id="alert_modal_storage_close_btn" data-name="alert_modal">
-                    <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                        <title>Cerrar</title>
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
-                    </svg>
-                </button>
             </div>
             <div class="modal_window legal_modal" id="legal_modal">
+                <div class="close_control">
+                    <button type="button" class="icon_container close_btn close_modal" id="modal_legal_close_btn" data-name="legal_modal">
+                        <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                            <title>Cerrar</title>
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
+                        </svg>
+                    </button>
+                </div>
                 <div class="modal_header">
                     <h1 class="title_modal" data-change data-es="Avisos legales" data-en="Legal notices ">Aviso Legal</h1>
                     <h2 data-change data-es="Términos y Condiciones:" data-en="Terms and conditions:">Términos y Condiciones:</h2>
@@ -181,16 +192,17 @@
                         <span class="label_btn" data-change data-es="Aceptar" data-en="Accept">Aceptar</span>
                     </button>
                 </div>
-
-                <button type="button" class="close_btn close_modal" id="modal_legal_close_btn" data-name="legal_modal">
-                    <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                        <title>Cerrar</title>
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
-                    </svg>
-                </button>
             </div>
             <div class="modal_window contact_modal" id="contact_modal">
+                <div class="close_control">
+                    <button type="button" class="icon_container close_btn close_modal" id="modal_form_close_btn" data-name="contact_modal">
+                        <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                            <title>Cerrar</title>
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
+                        </svg>
+                    </button>
+                </div>
                 <div class="modal_header">
                     <h1 class="title_modal" data-change data-es="¿Como Puedo Ayudarte?" data-en="How Can I Help You?">¿Como Puedo Ayudarte?</h1>
                 </div>
@@ -227,22 +239,17 @@
                         <p class="form_response" data-change></p>
                     </div>
                 </form>
-                <button type="button" class="close_btn close_modal" id="modal_form_close_btn" data-name="contact_modal">
-                    <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                        <title>Cerrar</title>
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
-                    </svg>
-                </button>
             </div>
             <div class="modal_window portfolio_modal" id="portfolio_modal">
-                <button class="close_btn close_modal" id="portfolio_form_close_btn" data-name="portfolio_modal">
-                    <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                        <title>Cerrar</title>
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
-                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
-                    </svg>
-                </button>
+                <div class="close_control">
+                    <button class="icon_container close_btn close_modal" id="portfolio_form_close_btn" data-name="portfolio_modal">
+                        <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                            <title>Cerrar</title>
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
+                        </svg>
+                    </button>
+                </div>
                 <div class="lists_container">
                     <div class="list_btns_container">
                         <button class="search_list_btn search_portfolio_list_btn" tabindex="0">
