--- a/index.html
+++ b/index.html
@@ -366,28 +366,24 @@
             </div>
             <div class="extra_btns_container nav_menu_extra_btns">
                 <div class="btns_container">
-                    <button type="button" class="extra_btn theme_btn">
-                        <div class="icon_container">
-                            <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <path
-                                    class="cls-1"
-                                    d="M12 21.9966C6.47715 21.9966 2 17.5194 2 11.9966C2 6.47373 6.47715 1.99658 12 1.99658C17.5228 1.99658 22 6.47373 22 11.9966C22 17.5194 17.5228 21.9966 12 21.9966ZM12 19.9966C16.4183 19.9966 20 16.4149 20 11.9966C20 7.5783 16.4183 3.99658 12 3.99658C7.58172 3.99658 4 7.5783 4 11.9966C4 16.4149 7.58172 19.9966 12 19.9966ZM12 17.9966V5.99658C15.3137 5.99658 18 8.68287 18 11.9966C18 15.3103 15.3137 17.9966 12 17.9966Z"
-                                ></path>
-                            </svg>
-                        </div>
+                    <button type="button" class="icon_container extra_btn theme_btn">
+                        <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path
+                                class="cls-1"
+                                d="M12 21.9966C6.47715 21.9966 2 17.5194 2 11.9966C2 6.47373 6.47715 1.99658 12 1.99658C17.5228 1.99658 22 6.47373 22 11.9966C22 17.5194 17.5228 21.9966 12 21.9966ZM12 19.9966C16.4183 19.9966 20 16.4149 20 11.9966C20 7.5783 16.4183 3.99658 12 3.99658C7.58172 3.99658 4 7.5783 4 11.9966C4 16.4149 7.58172 19.9966 12 19.9966ZM12 17.9966V5.99658C15.3137 5.99658 18 8.68287 18 11.9966C18 15.3103 15.3137 17.9966 12 17.9966Z"
+                            ></path>
+                        </svg>
                     </button>
-                    <button type="button" class="nav_btn extra_btn lang_btn" name="lang_btn">
+                    <button type="button" class="icon_container nav_btn extra_btn lang_btn phone_lang_btn" name="lang_btn">
                         <span class="label_btn label_lang" data-change data-es="EN" data-en="ES"></span>
                     </button>
                 </div>
-                <button type="button" class="extra_btn close_btn action_menu" id="menu_container_close_btn">
-                    <div class="icon_container">
-                        <svg class="icon_svg close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                            <title>Cerrar</title>
-                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
-                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
-                        </svg>
-                    </div>
+                <button type="button" class="icon_container extra_btn close_btn action_menu" id="menu_container_close_btn">
+                    <svg class="icon_svg close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                        <title>Cerrar</title>
+                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
+                        <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
+                    </svg>
                 </button>
             </div>
         </div>
@@ -4885,7 +4881,7 @@
                         <p class="form_response"></p>
                     </div>
                 </form>
-                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="whatsapp_btn animated_social_btn">
+                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="btn whatsapp_btn animated_social_btn">
                     <h3>WhatsApp</h3>
                     <span class="icon_container">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
