adding facebook meta data

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title data-change data-es="John Krazy - Haciendo Ideas Realidad" data-en="John Krazy - Making Ideas Happend">John Krazy - Making Ideas Happend</title>
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="./src/img/johnK_banner.webp" />
+        <meta
+            property="og:description"
+            content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!."
+        />
+        <meta property="og:title" content="John Krazy - Haciendo Ideas Realidad" />
+
         <meta
             name="description"
-            content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!"
+            content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!."
         />
         <meta name="keywords" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
