better traduction of title display

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title data-change data-es="John Krazy - Haciendo Ideas Realidad" data-en="John Krazy - Making Ideas Happend">John Krazy - Making Ideas Happend</title>
+        <title data-change data-es="John Krazy - Haciendo Ideas Realidad" data-en="John Krazy - Making Ideas come true">John Krazy - Making Ideas come true</title>
         <meta property="og:type" content="website" />
         <meta property="og:image" content="./src/img/johnK_banner.webp" />
         <meta
@@ -470,7 +470,7 @@
                     <h1>
                         <span data-change data-es="Haciendo" data-en="Making"></span>
                         <br /><span>ideas</span><br />
-                        <span data-change data-es="realidad" data-en="happen"></span>
+                        <span data-change data-es="realidad" data-en="come true"></span>
                     </h1>
                     <h2>
                         <span data-change data-es="Ilustración" data-en="Illustration"></span>
