add missing text before render lang

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title data-change data-es="John Krazy - Haciendo Ideas Realidad" data-en="John Krazy - Making Ideas come true">John Krazy - Making Ideas come true</title>
+        <title data-change data-es="John Krazy - Haciendo ideas realidad" data-en="John Krazy - Making ideas come true">John Krazy - Making ideas come true</title>
         <meta property="og:type" content="website" />
         <meta property="og:image" content="./src/img/johnK_banner.webp" />
         <meta
             property="og:description"
             content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!."
         />
-        <meta property="og:title" content="John Krazy - Haciendo Ideas Realidad" />
+        <meta property="og:title" content="John Krazy - Haciendo ideas realidad" />
 
         <meta
             name="description"
@@ -351,25 +351,25 @@
             </div>
             <div class="nav_menu_link_btns">
                 <button type="button" class="phone_menu_btn section_btn action_menu" name="hero_section">
-                    <span class="label_btn" data-change data-en="Home" data-es="Inicio"></span>
+                    <span class="label_btn" data-change data-en="Home" data-es="Inicio">Inicio</span>
                 </button>
                 <button type="button" class="phone_menu_btn section_btn action_menu" name="about_section">
-                    <span class="label_btn" data-change data-en="About Me" data-es="Quien Soy"></span>
+                    <span class="label_btn" data-change data-en="About Me" data-es="Quien Soy">Quien Soy</span>
                 </button>
                 <button type="button" class="phone_menu_btn section_btn action_menu" name="skills_section">
-                    <span class="label_btn" data-change data-en="Skills" data-es="Habilidades"></span>
+                    <span class="label_btn" data-change data-en="Skills" data-es="Habilidades">Habilidades</span>
                 </button>
                 <button type="button" class="phone_menu_btn section_btn action_menu" name="services_section">
-                    <span class="label_btn" data-change data-en="Services" data-es="Servicios"></span>
+                    <span class="label_btn" data-change data-en="Services" data-es="Servicios">Servicios</span>
                 </button>
                 <button type="button" class="phone_menu_btn section_btn action_menu" name="portfolio_section">
-                    <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio"></span>
+                    <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio">Portafolio</span>
                 </button>
                 <button type="button" class="phone_menu_btn section_btn action_menu" name="contact_section">
-                    <span class="label_btn" data-change data-en="Contact" data-es="Contacto"></span>
+                    <span class="label_btn" data-change data-en="Contact" data-es="Contacto">Contacto</span>
                 </button>
                 <button type="button" class="phone_menu_btn section_btn action_menu" name="legals_section">
-                    <span class="label_btn" data-change data-en="Legals" data-es="Legales"></span>
+                    <span class="label_btn" data-change data-en="Legals" data-es="Legales">Legales</span>
                 </button>
             </div>
             <div class="extra_btns_container nav_menu_extra_btns">
@@ -383,7 +383,7 @@
                         </svg>
                     </button>
                     <button type="button" class="icon_container nav_btn extra_btn lang_btn phone_lang_btn" name="lang_btn">
-                        <span class="label_btn label_lang" data-change data-es="EN" data-en="ES"></span>
+                        <span class="label_btn label_lang" data-change data-es="EN" data-en="ES">EN</span>
                     </button>
                 </div>
                 <button type="button" class="icon_container extra_btn close_btn action_menu" id="menu_container_close_btn">
@@ -468,23 +468,23 @@
                 <div class="bg_section hero_bg"></div>
                 <div class="title_container">
                     <h1>
-                        <span data-change data-es="Haciendo" data-en="Making"></span>
+                        <span data-change data-es="Haciendo" data-en="Making">Haciendo</span>
                         <br /><span>ideas</span><br />
-                        <span data-change data-es="realidad" data-en="come true"></span>
+                        <span data-change data-es="realidad" data-en="come true">realidad</span>
                     </h1>
                     <h2>
-                        <span data-change data-es="Ilustración" data-en="Illustration"></span>
+                        <span data-change data-es="Ilustración" data-en="Illustration">Ilustración</span>
                         <span class="accent_color">/</span>
-                        <span data-change data-es="Diseño" data-en="Design"></span>
+                        <span data-change data-es="Diseño" data-en="Design">Diseño</span>
                         <span class="accent_color">/</span>
                         <span>Web</span>
                         <span class="accent_color">/</span>
-                        <span data-change data-es="Desarrollo" data-en="Develop"></span>
+                        <span data-change data-es="Desarrollo" data-en="Develop">Desarrollo</span>
                     </h2>
                 </div>
                 <div class="btns_container">
-                    <button type="button" class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section" tabindex="0"><h3 class="label_btn" data-change data-es="Portafolio" data-en="Portfolio"></h3></button>
-                    <button type="button" class="btn contact_btn" id="hero_btn_about" name="about_section" tabindex="0"><h3 class="label_btn" data-change data-es="Contactame" data-en="Contact Me"></h3></button>
+                    <button type="button" class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section" tabindex="0"><h3 class="label_btn" data-change data-es="Portafolio" data-en="Portfolio">Portafolio</h3></button>
+                    <button type="button" class="btn contact_btn" id="hero_btn_about" name="about_section" tabindex="0"><h3 class="label_btn" data-change data-es="Contactame" data-en="Contact Me">Contactame</h3></button>
                 </div>
                 <button type="button" class="btn_down btn_menu" id="hero_btn_down" name="about_section">
                     <h3 data-change data-es="Ver mas" data-en="Show More"></h3>
@@ -599,7 +599,7 @@
                                 <path class="cls-1" d="m10 14-1-1-3 4h12l-5-7z"></path>
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio"></span>
+                        <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio">Portafolio</span>
                     </button>
                     <button type="button" class="section_btn nav_btn contact_nav_btn" name="contact_section">
                         <span class="icon_container icon_btn">
@@ -632,7 +632,7 @@
                         </div>
                     </button>
                     <button type="button" class="nav_btn lang_btn" name="lang_btn">
-                        <span class="label_btn label_lang" data-change data-es="EN" data-en="ES"></span>
+                        <span class="label_btn label_lang" data-change data-es="EN" data-en="ES">EN</span>
                     </button>
                 </div>
             </div>
