adding more embeded text before render lang

--- a/index.html
+++ b/index.html
@@ -4669,19 +4669,19 @@
         <section class="section skills_section" id="skills_section">
             <div class="section_content content">
                 <div class="swipe_animation_container_full">
-                    <h1 class="title_section animation_up" id="title_skills" data-change data-es="Habilidades" data-en="Skills"></h1>
+                    <h1 class="title_section animation_up" id="title_skills" data-change data-es="Habilidades" data-en="Skills">Habilidades</h1>
                 </div>
                 <div class="skills_icon_container design_skills_container">
                     <!--? SKILLS ICONS-->
-                    <h2 class="subtitle_section" data-change data-es="Herramientas de Diseño" data-en="Design Tools"></h2>
+                    <h2 class="subtitle_section" data-change data-es="Herramientas de Diseño" data-en="Design Tools">Herramientas de Diseño</h2>
                     <div class="icons_container swipe_animation_container_half" data-ref="design"></div>
                 </div>
                 <div class="skills_icon_container dev_skills_container">
-                    <h2 class="subtitle_section" data-change data-es="Herramientas de Desarrollo" data-en="Developer Tools"></h2>
+                    <h2 class="subtitle_section" data-change data-es="Herramientas de Desarrollo" data-en="Developer Tools">Herramientas de Desarrollo</h2>
                     <!--? SKILLS ICONS-->
                     <div class="icons_container swipe_animation_container_half" data-ref="dev"></div>
                 </div>
-                <h2 class="subtitle_section" data-change data-es="Certificaciones" data-en="Certifications"></h2>
+                <h2 class="subtitle_section" data-change data-es="Certificaciones" data-en="Certifications">Certificaciones</h2>
                 <div class="icons_container certification_container swipe_animation_container_half"></div>
             </div>
         </section>
@@ -4815,9 +4815,9 @@
                     <h1 class="title_section animation_up" id="title_portfolio" data-change data-es="Portafolio" data-en="Portfolio">Portafolio</h1>
                 </div>
                 <div class="cards_presentation">
-                    <h2 class="subtitle_section" data-change data-es="Proyectos Destacados" data-en="Top Projects"></h2>
+                    <h2 class="subtitle_section" data-change data-es="Proyectos Destacados" data-en="Top Projects">Proyectos Destacados</h2>
                     <button type="button" class="portfolio_btn" data-name="portfolio_modal">
-                        <span class="label_btn" data-change data-es="Ver todo" data-en="See All"> Ver todo </span>
+                        <span class="label_btn" data-change data-es="Ver todo" data-en="See All">Ver todo</span>
                     </button>
                 </div>
                 <div class="cards_container swipe_animation_container_half cards_hot_container"></div>
@@ -4856,7 +4856,7 @@
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="title_contact" data-change data-es="Contacto" data-en="Contact">Contacto</h1>
                 </div>
-                <h2 class="subtitle_section" data-change data-es="Espero me permitas crear proyectos interesantes con tus ideas." data-en="I hope you allow me to create interesting projects with your ideas">Estoy ansioso de hacer proyectos interesantes con tus ideas</h2>
+                <h2 class="subtitle_section" data-change data-es="Espero me permitas crear proyectos interesantes con tus ideas." data-en="I hope you allow me to create interesting projects with your ideas">Espero me permitas crear proyectos interesantes con tus ideas.</h2>
 
                 <form class="form contact_form" id="contact_form">
                     <h3 data-change data-es="Envia correo" data-en="Send Email">Envia correo</h3>
@@ -4908,13 +4908,13 @@
             <div class="footer_content content">
                 <div class="lebels_container">
                     <div class="made_content">
-                        <span class="copy_rights">@JohnKrazy - 2024 - <span data-change data-es="Derechos reservados" data-en="Rights Reserved"></span></span>
+                        <span class="copy_rights">@JohnKrazy - 2024 - <span data-change data-es="Derechos reservados" data-en="Rights Reserved">Derechos reservados</span></span>
                         <div class="btns_container">
                             <button type="button" class="link_btn" data-name="legal_modal">
-                                <span class="label_btn" data-change data-es="Legales" data-en="Legals"></span>
+                                <span class="label_btn" data-change data-es="Legales" data-en="Legals">Legales</span>
                             </button>
                             <button type="button" class="link_btn" data-name="alert_modal">
-                                <span class="label_btn" data-change data-es="Uso de datos" data-en="Data Use"></span>
+                                <span class="label_btn" data-change data-es="Uso de datos" data-en="Data Use">Uso de datos</span>
                             </button>
                         </div>
                     </div>
