more change before rendering

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                     <button type="button" class="btn contact_btn" id="hero_btn_about" name="about_section" tabindex="0"><h3 class="label_btn" data-change data-es="Contactame" data-en="Contact Me">Contactame</h3></button>
                 </div>
                 <button type="button" class="btn_down btn_menu" id="hero_btn_down" name="about_section">
-                    <h3 data-change data-es="Ver mas" data-en="Show More"></h3>
+                    <h3 data-change data-es="Ver más" data-en="Show More">Ver más</h3>
                     <svg class="arrow_down_svg accent_color" data-name="arrow_down_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 9">
                         <title>arrow down</title>
                         <path class="cls-1" d="M17.94,0H15.12l0,0L9,6A.06.06,0,0,1,9,6l-6-6,0,0H.06C0,0,0,.09,0,.13L9,9A0,0,0,0,0,9,9L18,.13S18,0,17.94,0Z"></path>
