--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                 <div class="about_salute">
                     <div class="about_animation">
                         <div class="swipe_animation_container_full">
-                            <h1 class="title_salute animation_up" id="title_salute" data-change data-es="Hola, soy" data-en="Hi, I'm"></h1>
+                            <h1 class="title_salute animation_up" id="title_salute" data-change data-es="Hola, soy" data-en="Hi, I'm">Hola, soy</h1>
                         </div>
 
                         <div class="swipe_animation_container_full">
