image meta link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title data-change data-es="John Krazy - Haciendo ideas realidad" data-en="John Krazy - Making ideas come true">John Krazy - Making ideas come true</title>
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="./src/img/johnK_banner.webp" />
+        <meta property="og:image" content="./src/img/personal_logos/johnK_banner.webp" />
         <meta
             property="og:description"
             content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!."
