--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
         <meta property="og:type" content="website" />
         <meta property="og:image:url" content="https://raw.githubusercontent.com/JohnMcKrazy/JohnK_Portafolio/main/src/img/personal_logos/johnK_banner.jpg" />
         <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/JohnMcKrazy/JohnK_Portafolio/main/src/img/personal_logos/johnK_banner.jpg" />
-        <meta property="og:image:width" content="1400px" />
-        <meta property="og:image:height" content="600px" />
+        <meta property="og:image:width" content="1280px" />
+        <meta property="og:image:height" content="640px" />
         <meta
             property="og:description"
             content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!."
         />
         <meta property="og:title" content="John Krazy - Haciendo ideas realidad" />
-
+        <meta property="og:locale" content="es" />
+        <meta property="og:url" content="https://johnmckrazy.github.io/JohnK_Portafolio/" />
         <meta
             name="description"
             content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!."
