replace src inner for raw link, change img spacing

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title data-change data-es="John Krazy - Haciendo ideas realidad" data-en="John Krazy - Making ideas come true">John Krazy - Making ideas come true</title>
         <meta property="og:type" content="website" />
-        <meta property="og:image:url" content="./src/img/personal_logos/johnK_banner.jpg" />
-        <meta property="og:image:secure_url" content="./src/img/personal_logos/johnK_banner.jpg" />
+        <meta property="og:image:url" content="https://raw.githubusercontent.com/JohnMcKrazy/JohnK_Portafolio/main/src/img/personal_logos/johnK_banner.jpg" />
+        <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/JohnMcKrazy/JohnK_Portafolio/main/src/img/personal_logos/johnK_banner.jpg" />
         <meta property="og:image:width" content="1280px" />
         <meta property="og:image:height" content="640px" />
         <meta
